<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPlease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="start"
        android:letterSpacing="0.04"
        android:text="@string/text_please_add_book"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etBookName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/book_name"
        android:maxLines="1"
        android:paddingVertical="10dp"
        android:paddingStart="9dp"
        android:paddingEnd="32dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPlease"
        app:layout_constraintVertical_bias="0.0"
        app:layout_goneMarginEnd="36dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/plese_write_author"
        android:maxLines="1"
        android:paddingVertical="10dp"
        android:paddingStart="9dp"
        android:paddingEnd="32dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBookName"
        app:layout_constraintVertical_bias="0.0"
        app:layout_goneMarginEnd="36dp" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDateOfManufacture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="90dp"
        android:inputType="number"
        android:background="@drawable/background_edit_text"
        android:hint="@string/plese_write_date_of_manufacture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:maxLines="1"
        android:paddingVertical="10dp"
        android:paddingStart="9dp"
        android:paddingEnd="64dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/etAuthor"
        app:layout_constraintVertical_bias="0.0"
        app:layout_goneMarginEnd="36dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_button_16"
        android:paddingHorizontal="5dp"
        android:text="@string/text_add_book"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
